# CppColor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
ColorCpp/: LineInFunction.hpp  copies.cpp  double_letter.cpp  main.cpp  p8.cpp  p8.hpp  p8_test.cpp  spans.cpp  spans.hpp  spans_test.cpp  transform_letter.cpp  transform_reducer.cpp
ColorCpp.xcodeproj/: project.pbxproj
ColorCpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ColorCpp.xcodeproj/xcshareddata/xcschemes/: ColorCpp.xcscheme
ColorCpp.xcodeproj/xcuserdata/robert.xcuserdatad/xcschemes/: xcschememanagement.plist
ColorCpp/Cpp20/: LineInFunction.hpp
ColorCpp/Edabit/: automorphic_numbers.cpp  double_letter.cpp  transform_letter.cpp
